--- a/cms/static/sass/elements/_navigation.scss
+++ b/cms/static/sass/elements/_navigation.scss
@@ -159,7 +159,7 @@ nav {
         display: block;
 
         &:hover, &:active {
-          color: $blue-d2;
+          color: $uxpl-blue-base;
         }
       }
     }
