--- a/cms/static/sass/partials/_variables.scss
+++ b/cms/static/sass/partials/_variables.scss
@@ -46,6 +46,7 @@ $uxpl-blue-hover-active: rgb(6, 86, 131) !default; // wcag2a compliant
 $uxpl-light-blue-base: rgb(242, 248, 251) !default
 
 $uxpl-green-base: rgb(0, 129, 0) !default; // wcag2a compliant
+$uxpl-green-dark-base: rgb(0, 88, 0) !default;
 $uxpl-green-hover-active: rgb(0, 155, 0) !default; // wcag2a compliant
 $uxpl-green-dark-hover-active: rgb(0,138,0) !default;
 
